// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Candytar renders with color amber 1`] = `
<svg
  className="ax-candytar ax-candytar--amber"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color blue 1`] = `
<svg
  className="ax-candytar ax-candytar--blue"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color brown 1`] = `
<svg
  className="ax-candytar ax-candytar--brown"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color chartreuse 1`] = `
<svg
  className="ax-candytar ax-candytar--chartreuse"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color green 1`] = `
<svg
  className="ax-candytar ax-candytar--green"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color grey 1`] = `
<svg
  className="ax-candytar ax-candytar--grey"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color lilac 1`] = `
<svg
  className="ax-candytar ax-candytar--lilac"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color orange 1`] = `
<svg
  className="ax-candytar ax-candytar--orange"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color pink 1`] = `
<svg
  className="ax-candytar ax-candytar--pink"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color purple 1`] = `
<svg
  className="ax-candytar ax-candytar--purple"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color rose 1`] = `
<svg
  className="ax-candytar ax-candytar--rose"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with color teal 1`] = `
<svg
  className="ax-candytar ax-candytar--teal"
  style={
    Object {
      "height": undefined,
      "width": undefined,
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;

exports[`Candytar renders with custom size 1`] = `
<svg
  className="ax-candytar ax-candytar--rose"
  style={
    Object {
      "height": "4rem",
      "width": "4rem",
    }
  }
  viewBox="0 0 32 32"
>
  <circle
    className="ax-candytar__background"
    cx="16"
    cy="16"
    r="16"
  />
  <path
    className="ax-candytar__body"
    d="M16,20 C12.1340068,20 9,16.8659932 9,13 C9,9.13400675 12.1340068,6 16,6 C19.8659932,6 23,9.13400675 23,13 C23,16.8659932 19.8659932,20 16,20 Z M6,28.4693659 L6,28.4693659 C7.72660626,24.654283 11.5666365,22 16.0266078,22 C20.486579,22 24.3266093,24.654283 26.0532155,28.4693659 C23.3099448,30.6780366 19.8226569,32 16.0266078,32 C12.2305587,32 8.74327068,30.6780366 6,28.4693659 Z"
    filter="url(#ax-candytar__filter)"
  />
</svg>
`;
